--- a/BaseSpriteLib VS2017/BaseSpriteLib/opengltest/INFR2115_as1.vcxproj
+++ b/BaseSpriteLib VS2017/BaseSpriteLib/opengltest/INFR2115_as1.vcxproj
@@ -100,14 +100,17 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="vec3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="drawPrimitives.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="HorizontalScrollingBackground.h" />
+    <ClInclude Include="Particle.h" />
     <ClInclude Include="resource1.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Timer.h" />
+    <ClInclude Include="vec3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
