--- a/BaseSpriteLib VS2017/BaseSpriteLib/opengltest/INFR2115_as1.vcxproj
+++ b/BaseSpriteLib VS2017/BaseSpriteLib/opengltest/INFR2115_as1.vcxproj
@@ -15,7 +15,7 @@
     <ProjectGuid>{78CE87DA-BC7A-4D25-BDC8-9DA3D93416E9}</ProjectGuid>
     <RootNamespace>opengltest</RootNamespace>
     <Keyword>Win32Proj</Keyword>
-    <WindowsTargetPlatformVersion>10.0.16299.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -98,6 +98,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="HorizontalScrollingBackground.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="vec3.cpp" />
@@ -107,6 +108,7 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="HorizontalScrollingBackground.h" />
     <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleSystem.h" />
     <ClInclude Include="resource1.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Timer.h" />
