--- a/BaseSpriteLib VS2017/BaseSpriteLib/opengltest/INFR2115_as1.vcxproj.filters
+++ b/BaseSpriteLib VS2017/BaseSpriteLib/opengltest/INFR2115_as1.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="vec3.cpp">
       <Filter>Source Files\Particles</Filter>
     </ClCompile>
+    <ClCompile Include="Particle.cpp">
+      <Filter>Source Files\Particles</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="drawPrimitives.h">
@@ -63,6 +66,9 @@
       <Filter>Header Files\Particles</Filter>
     </ClInclude>
     <ClInclude Include="vec3.h">
+      <Filter>Header Files\Particles</Filter>
+    </ClInclude>
+    <ClInclude Include="ParticleSystem.h">
       <Filter>Header Files\Particles</Filter>
     </ClInclude>
   </ItemGroup>
