Testing first system.

--- a/BaseSpriteLib VS2017/BaseSpriteLib/opengltest/INFR2115_as1.vcxproj
+++ b/BaseSpriteLib VS2017/BaseSpriteLib/opengltest/INFR2115_as1.vcxproj
@@ -99,6 +99,7 @@
     <ClCompile Include="HorizontalScrollingBackground.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleSystem.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="vec3.cpp" />
